manifests/service-iis.yaml
apiVersion: v1
kind: Service
metadata:
  name: win2019-vs-dotnet-iis
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    kubevirt.io/domain: win2019-vs-dotnet
    vm.kubevirt.io/name: win2019-vs-dotnet
  sessionAffinity: None
  type: ClusterIP
